# Counterfacutals

./: RLexample.py  add_selection_prob.py  counterfactuals.txt  data_50_panels_5_counterf.pkl  data_50_panels_5_counterf_selection.pkl  data_mean_panel_250_counterf.pkl  data_mean_panel_250_counterf_selection.pkl  general_utils.py  make_panels.py  notes  predict_walkaway.py  pyproject.toml  reading.py  reprocessing_slotcost_variables_example.py  sad.ipynb  stats.ipynb  wtp_counterfactuals.py  wtp_retail_notebook.ipynb
classes/: __init__.py  funcs.py  instance.py  panel_generator.py  rl_components.py  routing_funcs.py  simulation.py
classes/predictors/: __init__.py  cts_predictors.py  cts_utils.py  wtp_predictors.py
instances/: gen_data.pkl
models/gp/: runFinalTests_Results_trust-ai-wtp-gp-7ls79_iter1.json  runInitialExploration_Results_trust-ai-wtp-gp-q2f7g_iter3.json
models/h2o/: Grid_GBM_py_18_sid_b019_model_python_1639069782580_1_model_1
